@startuml

interface Ucabilir {
    - ucmaHizi
    + uc()
    + getUcmaHizi()
    + setUcmaHizi()
}

interface Yuruyebilir {
    - yurumeHizi
    + yuru()
    + getYurumeHizi()
    + setYurumeHizi()
}

class Kus {
    - String isim
    - int yas
    + String getIsim()
    + int getYas()
    + void setIsim()
    + void setYas()
    + void yazYas()
    + void yazIsim()
}

class Baykus {

}

class Guvercin {

}

class DeveKusu {

}

Kus <|-- Baykus
Kus <|-- Guvercin
Kus <|-- DeveKusu

Yuruyebilir <|-- Baykus
Ucabilir <|-- Baykus

Yuruyebilir <|-- Guvercin
Ucabilir <|-- Guvercin

Yuruyebilir <|-- DeveKusu

@enduml
